--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.7.2",
+    "filepond-plugin-file-encode": "^2.1.14",
+    "filepond-plugin-file-validate-type": "^1.2.8",
     "vue": "^3.3.11",
     "vue-filepond": "^7.0.4",
-    "xlsx": "^0.18.5"
+    "vue3-table-lite": "^1.3.9",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
